--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,5 +3,8 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "vueCompilerOptions": {
+    "globalTypesPath": "./src/vite-env.d.ts"
+  }
 }
