Added image generation waiting on varifacation

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM composer:2 AS vendor
 
 WORKDIR /app
 COPY composer.json composer.lock ./
-# Install without running scripts to avoid needing app bootstrapped during build
+# No scripts; we just need vendor for seeding the runtime volume once
 RUN composer install --no-dev --prefer-dist --no-interaction --no-progress --no-scripts
 
 # ---- app stage: PHP runtime that serves Laravel over HTTP for dev ----
@@ -19,10 +19,14 @@ RUN apt-get update && apt-get install -y \
  && docker-php-ext-install pdo pdo_pgsql \
  && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Bring in vendor from the deps stage
-COPY --from=vendor /app/vendor ./vendor
+# Make sure composer is available in the final image
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Copy the rest of your app
+# Copy vendor from deps stage to a *seed* location (not the live vendor volume path)
+# We'll copy from here into the mounted vendor volume on first boot if it's empty.
+COPY --from=vendor /app/vendor /opt/vendor-seed
+
+# Copy app (needed for first boot / when not bind-mounted)
 COPY . .
 
 EXPOSE 9000
